deploy/minikube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-service
  namespace: customer-service
  labels:
    app: customer-service
spec:
  type: ClusterIP
  selector:
    app: customer-service
  ports:
    - name: http
      port: 80
      targetPort: http
